# bool-toggle

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: boolean_toggler.rs  lib.rs
